[mod] API router 재설정
