# router/router.go
@@ -53,52 +53,25 @@ func (p *Router) Idx(swaggerHost string) *gin.Engine {
 	e.GET("/swagger/:any", ginSwg.WrapHandler(swgFiles.Handler))
 	docs.SwaggerInfo.Host = swaggerHost
 
-	/*
-		엔드포인트 구성에 대해서 전반적인 코멘트 드립니다.
-		1. REST API의 성숙도 모델에 대해서 공부해보시면 좋을 것 같습니다.
-
-		2. 일반적으로 HTTP URI에 new, modify 와 같은 행위는 들어가지 않습니다.
-			복수형의 단어로 구성을 하고, 동일한 URI 내에서 http method만 변경하여 행위를 표현하는 것이 일반적인 REST API의 구성 방식입니다.
-			e.g.
-			GET v1/menus -> 메뉴 목록을 조회.
-			GET v1/menus/1 -> 1번 메뉴를 조회.
-			POST v1/menus -> 메뉴를 생성.
-			PATCH v1/menus/1 -> 1번 메뉴에 대해서 업데이트
-			DELETE v1/menus/1 -> 1번 메뉴에 대해서 삭제
-	*/
-
-	/*
-		Group을 사용해 연관된 것끼리 묶어주신 점 좋습니다. 이렇게 구성한다면 API가 확장되어도 어느정도 가독성을 지킬 수 있어 보입니다.
-	*/
-	recipantGroup := e.Group("/recipant")
+	v1 := e.Group("/v1")
 	{
-		menuGroup := recipantGroup.Group("/menu")
+		menuGroup := v1.Group("/menus")
 		{
+			menuGroup.GET("", p.ct.GetMenuList)
 			menuGroup.POST("", p.ct.CreateMenu)
 			menuGroup.PUT("/:name", p.ct.UpdateMenu)
 			menuGroup.DELETE("/:name", p.ct.DeleteMenu)
 		}
-		orderGroup := recipantGroup.Group("/order")
+		orderGroup := v1.Group("/orders")
 		{
-			orderGroup.GET("/list", p.ct.GetOrderList)
-			orderGroup.PUT("/:seq/:status", p.ct.ChangeOrderStatus)
-		}
-	}
-	ordererGroup := e.Group("/orderer")
-	{
-		menuGroup := ordererGroup.Group("/menu")
-		{
-			menuGroup.GET("/list", p.ct.GetMenuList)
-		}
-		orderGroup := ordererGroup.Group("/order")
-		{
-			orderGroup.GET("/list", p.ct.GetOrderList)
+			orderGroup.GET("", p.ct.GetOrderList)
 			orderGroup.POST("", p.ct.CreateOrder)
-			orderGroup.PUT("/:seq/:type", p.ct.ChangeOrderMenu)
+			orderGroup.PUT("/menu/:seq/:type", p.ct.ChangeOrderMenu)
+			orderGroup.PUT("/status/:seq/:status", p.ct.ChangeOrderStatus)
 		}
-		reviewGroup := ordererGroup.Group("/review")
+		reviewGroup := v1.Group("/reviews")
 		{
-			reviewGroup.GET("/list/:menu", p.ct.GetReviewList)
+			reviewGroup.GET("/:menu", p.ct.GetReviewList)
 			reviewGroup.POST("", p.ct.CreateReview)
 		}
 	}
